# great_YS_libraries

./: README.md
fssimplewindow/: CMakeLists.txt
fssimplewindow/ysbitmapfont/: CMakeLists.txt
ysclass/document/: head.html  reference.html  tail.html  ysclass-e.html  ysclass-j.html
ysclass/include/: ysbinarytree.h  ysclass.h  ysclip.h  ysdef.h  ysequation.h  ysfilename.h  ysgeometry.h  yshash.h  yslist.h  yslist2.h  ysmath.h  ysmatrix.h  ysmatrixtemplate.h  ysoctree.h  ysproperty.h  ysshell.h  ysshellblend2.h  ysshellkdtree.h  ysshelloctree.h  ysshellsearch.h  ysshelltype.h  ysshellutil.h  yssort.h  ystempobj.h  ysveci.h  yswizard.h
ysclass/samples/: index.txt
ysclass/samples/glut/: makefile  sample01.cpp  sample02.cpp  sample03.cpp  sample04.cpp  sample05.cpp  sample06.cpp  sample07.cpp  sample08.cpp  sample09.cpp
ysclass/samples/glut/simldg/: gear1.tri  ldg.cpp
ysclass/samples/impulse/: makefile  sample01.cpp  sample02.cpp  sample03.cpp  sample04.cpp  sample05.cpp  sample06.cpp  sample07.cpp
ysclass/samples/impulse/simldg/: fuselage.tri  gear2.tri  ldg.cpp  lid1.tri  lid2.tri
ysclass/samples/nographics/: makefile  sample01.cpp  sample02.cpp  sample03.cpp  sample04.cpp  sample05.cpp  sample06.cpp  sample07.cpp  sample08.cpp  sample09.cpp
ysclass/src/: ysadvgeometry.cpp  ysadvgeometry.h  ysadvgeometryx.cpp  ysargs.cpp  ysargs.h  ysarray.h  ysbase.cpp  ysbase.h  ysclassmgr.cpp  ysclassmgr.h  ysclip.cpp  ysedgeloop.h  ysequation.cpp  ysexception.cpp  ysexception.h  ysfilename.cpp  ysgeometry.cpp  yshash.cpp  yshash_.h  yskdtree.cpp  yskdtree.h  yslattice.h  yslist.cpp  ysmalloc.h  ysmath.cpp  ysmatrix.cpp  ysmatrix3x3.cpp  ysmatrix4x4.cpp  yspixelmap.cpp  yspixelmap.h  yspredefined.cpp  yspredefined.h  ysprintf.cpp  ysprintf.h  ysproperty.cpp  ysreldir.cpp  ysreldir.h  ysshell.cpp  ysshell2d.cpp  ysshell2d.h  (+13 more)
yssimplesound/: CMakeLists.txt
yssimplesound/src/: yssimplesound.cpp
